[project]
name = "context-clash"
version = "0.1.0"
description = "A neural showdown arena for AI-on-AI debate with human intervention."
dependencies = [
    "streamlit>=1.30.0",
    "ollama>=0.1.0",
]

[project.scripts]
context-clash = "context_clash.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
